tests/fail/04_item_trait.stderr
error: unexpected end of input, expected identifier
 --> tests/fail/04_item_trait.rs:3:1
  |
3 | #[alias(T1, T2,)]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `alias` (in Nightly builds, run with -Z macro-backtrace for more info)
